--- a/index.html
+++ b/index.html
@@ -1,21 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Champagne KRUG</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Google Fonts pour une belle typographie -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
-        <img src="images/logo.png" class="logo">
-        <div class="links">
-          <a href="" class="link">Présentation</a>
-          <a href="" class="link">Team</a>
-          <a href="" class="link">Contact</a>
-        </div>
+
+  <!-- Barre de navigation -->
+  <header class="navbar">
+    <div class="nav-left">
+      <a href="#">Nos champagnes <link rel="stylesheet" href=""></a>
+      <a href="#">La Maison</a>
+      <a href="#">Nos valeurs</a>
+      <a href="#">Galerie</a>
+    </div>
+
+    <div class="nav-center">KRUG</div>
+
+    <div class="nav-right">
+      <a href="#">🍾</a> <!-- Icône de panier -->
+    </div>
+  </header>
+
+  <!-- Bannière avec image de fond -->
+  <section class="banner">
+    <div class="banner-content">
+      <h1>Un champagne d'exception<br>pour <em>célébrer</em> vos moments de vie.</h1>
+      <a href="#" class="btn">Découvrez nos champagnes</a>
+    </div>
+  </section>
+
+  <section class="introduction">
+  <div class="champagne-krug">
+    <img src="Capture d’écran 2025-05-30 à 20.17.44.png" alt="Flûte à champagne" class="symbole-krug" />
+    <p class="texte-krug">
+      Depuis 1843, le savoir familial de la maison de champagne Krug incarne l’excellence artisanale avec des cuvées d’exception issues d’un assemblage méticuleux de vins de réserve.
+    </p>
+  </div>
+</section>
+
+
+
+
+  <section class="best-sellers">
+    <div class="left">
+      <h1>Meilleures ventes</h1>
+      <p>Le champagne Krug, avec sa richesse aromatique, apporte une touche unique à votre table et sublime la saveur de chaque mets, transformant chaque repas en une véritable expérience gastronomique.
+      </p>
+      <button>Découvrir nos meilleures ventes</button>
+    </div>
+
+    <div class="right">
+      <div class="card">
+        <img src="krug site 2002.avif" alt="Krug Millésime 2002">
+        <h3>Krug Millésime 2002</h3>
+        <p>730 €</p>
       </div>
-      <div class="maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22568.981709450545!2d-1.2337033521696312!3d45.002129874151656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4801ffc558a23645%3A0xc02b43d4e1f03569!2sLacanau%20Oc%C3%A9an%2C%2033680%20Lacanau!5e0!3m2!1sfr!2sfr!4v1745401054295!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-      <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/Xc0-e1q0pDA?si=BT2RVF4IZczx0zhR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+      <div class="card">
+        <img src="krug site 171.avif" alt="Krug Grande Cuvée Edition 171">
+        <h3>Krug Grande Cuvée Edition 171</h3>
+        <p>295 €</p>
+      </div>
+      <div class="card">
+        <img src="krug site rosé.avif" alt="Krug Rosé 27ème édition">
+        <h3>Krug Rosé 27ème édition</h3>
+        <p>145 €</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="creations-section">
+    <div class="image-container">
+      <img src="site krug étiquette.avif" alt="Nos champagnes">
+    </div>
+    <div class="text-container">
+      <h1>Le champagne Krug accompagne,
+        <br>vos moments de partage<br>avec finesse<br>et équilibre.</h1>
+      <a href="#">Nos champagnes</a>
+    </div>
+  </section>
+
+  <!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ma Galerie</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Icônes via Font Awesome -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+
+  <header>
+    <h1>Les valeurs de la maison Krug</h1>
+    <h2>Krug incarne l’individualité, l’excellence et la générosité dans chaque cuvée, avec passion et précision.
+    </h2>
+  </header>
+
+  <section class="galerie">
+    <figure>
+      <img src="individualité.avif" alt="Valeur 1">
+      <figcaption>Individualité</figcaption>
+    </figure>
+    <figure>
+      <img src="générosité.avif" alt="Valeur 2">
+      <figcaption>Excellence</figcaption>
+    </figure>
+    <figure>
+      <img src="excellence.avif" alt="Valeur 3">
+      <figcaption>Générosité</figcaption>
+    </figure>
+  </section>
+
+  <section class="pictos">
+    <i class="fas fa-camera"></i>
+    <i class="fas fa-heart"></i>
+    <i class="fas fa-star"></i>
+  </section>
+
+  <section class="photos-histoire">
+    <img src="lieu krug..avif" alt="Propriété Krug" class="image-section">
+    <img src="portrait krug.avif" alt="Portrait Krug" class="half-image">
+  </section>
+</body>
+</html>
+
+</body>
+</html>
+
 </body>
 </html>
