--- a/index.html
+++ b/index.html
@@ -78,22 +78,13 @@
       <img src="site krug étiquette.avif" alt="Nos champagnes">
     </div>
     <div class="text-container">
-      <h1>Le champagne Krug accompagne,
-        <br>vos moments de partage<br>avec finesse<br>et équilibre.</h1>
-      <a href="#">Nos champagnes</a>
+      <h1>Fondée en 1843 par Joseph Krug,
+        <br>la maison fait vivre<br>avec passion<br>son savoir-faire.</h1>
+      <a href="#">La Maison</a>
     </div>
   </section>
 
-  <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ma Galerie</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Icônes via Font Awesome -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-</head>
+  
 <body>
 
   <header>
@@ -104,34 +95,57 @@
 
   <section class="galerie">
     <figure>
-      <img src="individualité.avif" alt="Valeur 1">
+      <img src="individualité.avif" alt="Valeur 1" class="valeur-img">
+      <img src="picto individualité.png" alt="Picto individualité" class="picto">
       <figcaption>Individualité</figcaption>
     </figure>
     <figure>
-      <img src="générosité.avif" alt="Valeur 2">
+      <img src="image générosité.avif" alt="Valeur 2" class="valeur-img">
+      <img src="picto générosité.png" alt="Picto générosité" class="picto">
       <figcaption>Excellence</figcaption>
     </figure>
     <figure>
-      <img src="excellence.avif" alt="Valeur 3">
+      <img src="excellence.avif" alt="Valeur 3" class="valeur-img">
+      <img src="picto excellence.png" alt="Picto excellence" class="picto">
       <figcaption>Générosité</figcaption>
     </figure>
   </section>
-
-  <section class="pictos">
-    <i class="fas fa-camera"></i>
-    <i class="fas fa-heart"></i>
-    <i class="fas fa-star"></i>
-  </section>
-
-  <section class="photos-histoire">
-    <img src="lieu krug..avif" alt="Propriété Krug" class="image-section">
-    <img src="portrait krug.avif" alt="Portrait Krug" class="half-image">
+  
+<body>
+  <section class="double-image">
+    <img src="lieu krug..avif" alt="Propriété Krug" class="img-half">
+    <img src="portrait krug.avif" alt="Photo historique" class="img-half">
   </section>
 </body>
+  <footer class="my_class_0047">
+    <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+    <div class="footer-left">
+      
+      <nav>
+        <ul>
+          <li><a href="#">Nos champagnes</a></li>
+          <li><a href="#">La maison</a></li>
+          <li><a href="#">Nos valeurs</a></li>
+          <li><a href="#">Galerie</a></li>
+        </ul>
+      </nav>
+      <div class="social-icons">
+        <a href="#"><img src="logo instagram NB.png" alt="Instagram" /></a>
+        <a href="#"><img src="logo facebook NB.png" alt="Facebook" /></a>
+      </div>
+    </div>
+    <div class="footer-right">
+      <p>Inscrivez-vous pour recevoir les dernières informations.</p>
+      <form>
+        <input type="email" placeholder="Adresse e-mail" required />
+        <button type="submit">S'inscrire</button>
+      </form>
+      <p class="credits">Conçu avec <a href="#">Squarespace</a></p>
+    </div>
+  </footer>
+
 </html>
 
-</body>
 </html>
 
-</body>
-</html>
