--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section class="introduction">
   <div class="champagne-krug">
-    <img src="Capture d’écran 2025-05-30 à 20.17.44.png" alt="Flûte à champagne" class="symbole-krug" />
+    <img src="Capture d ecran 2025-05-30 à 20.17.44.png" alt="Flûte à champagne" class="symbole-krug" />
     <p class="texte-krug">
       Depuis 1843, le savoir familial de la maison de champagne Krug incarne l’excellence artisanale avec des cuvées d’exception issues d’un assemblage méticuleux de vins de réserve.
     </p>
@@ -95,17 +95,17 @@
 
   <section class="galerie">
     <figure>
-      <img src="individualité.avif" alt="Valeur 1" class="valeur-img">
-      <img src="picto individualité.png" alt="Picto individualité" class="picto">
+      <img src="individualite.avif" alt="Valeur 1" class="valeur-img">
+      <img src="picto individualite.png" alt="Picto individualité" class="picto">
       <figcaption>Individualité</figcaption>
     </figure>
     <figure>
-      <img src="image générosité.avif" alt="Valeur 2" class="valeur-img">
-      <img src="picto générosité.png" alt="Picto générosité" class="picto">
+      <img src="excellence.avif" alt="Valeur 2" class="valeur-img">
+      <img src="picto excellence.png" alt="Picto excellence" class="picto">
       <figcaption>Excellence</figcaption>
     </figure>
     <figure>
-      <img src="excellence.avif" alt="Valeur 3" class="valeur-img">
+      <img src="generosite.avif" alt="Valeur 3" class="valeur-img">
       <img src="picto excellence.png" alt="Picto excellence" class="picto">
       <figcaption>Générosité</figcaption>
     </figure>
